--- a/README.rdoc
+++ b/README.rdoc
@@ -18,10 +18,10 @@ Base58 is hosted by http://gemcutter.com. Please make sure you have added them t
   require 'base58'
   
   # Int to Base58
-  Base58.int_to_base58(12345) # => 4ER
+  Base58.encode(12345) # => 4ER
   
   # Base58 to Int
-  Base58.base58_to_int('A2Ph') # => 6639914
+  Base58.decode('A2Ph') # => 6639914
 
 == RDoc Documentation
 
